# p2skat

./: Cargo.toml  flake.nix
src/: main.rs  sim.rs
src/crypto/: mod.rs  protocol.rs  sra.rs
src/game/: bidding.rs  card.rs  contract.rs  mod.rs  scoring.rs  state.rs  trick.rs
src/net/: connect.rs  message.rs  mod.rs  peer.rs  session.rs  tor.rs
src/ui/: terminal.rs
