[package]
name = "p2skat"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
arti-client = { version = "0.40", default-features = false, features = ["tokio", "rustls", "onion-service-client", "onion-service-service"] }
tor-hsservice = "0.40"
tor-cell = "0.40"
tor-rtcompat = "0.40"
futures = "0.3"
safelog = "0.8"
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
